--- a/src/app/narvbar/narvbar.component.html
+++ b/src/app/narvbar/narvbar.component.html
@@ -1,1 +1,4 @@
-<p>narvbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top ">
+    <a class="navbar-brand" style="font-size: 30px;"><b>GitHub Search</b></a>
+ 
+  </nav>
