--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row" style="margin-top: 30px;">
      
-        <h2 style="color:rgb(255, 136, 0)">Search your Repositories here using gitHub Username</h2>
+        <h2 style="color:blue">Search your Repositories here using gitHub Username</h2>
         <div class="col-md-6" style="padding-top: 2px;">
             <form class="form-inline md-form mr-auto mb-4"#name="ngForm">
                 <input class="form-control  mr-sm-2" type="text" placeholder="Enter GitHub name" aria-label="Search" [(ngModel)] ="UserName" name="UserName">
