--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 @import "~bootstrap/dist/css/bootstrap.css";
+body{
+    background-image: url('./assets/back.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
