--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -44,10 +44,10 @@
       <div class="col-md-6 pb-5" *ngFor='let repo of repos'>
           <div class="card">
             <div class="card-header">
-              <p style="font-weight: bold; font-size: 30px; text-align: center;">Name:{{repo.name}}</p>
+              <p appHighlight style="font-weight: bold; font-size: 30px; text-align: center; color:white">Name:{{repo.name}}</p>
             </div>
             <div class="card-body">
-              <p>Description:{{repo.description}}</p>
+              <p >Description:{{repo.description}}</p>
               <p>Language used:{{repo.language}}</p>
               <p>Date created:{{repo.created_at| date}}</p>
             </div>
